Fix incompatibility with original 7-Zip

It is wrong to expect strictly z here, the letter can be different and depends on 7-Zip build type.

BUG: 456797
FIXED-IN: 22.08.2